--- a/ramls/examples/templateProcessingRequest.sample
+++ b/ramls/examples/templateProcessingRequest.sample
@@ -1,7 +1,7 @@
 {
   "templateId":"8c352e07-308b-4cd2-b4e3-4a15096cd943",
   "lang": "en",
-  "outputFormat": "txt",
+  "outputFormat": "text/plain",
   "context": {
     "user": {
       "name": "Alex"
