--- a/ramls/configuration.json
+++ b/ramls/configuration.json
@@ -1,6 +1,7 @@
 {
   "$schema": "http://json-schema.org/draft-04/schema#",
   "type": "object",
+  "description": "Configuration",
   "properties": {
     "id": {
       "type": "string",
