[MODTEMGENG-14] Forbid in use templates deletion

--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,19 @@
       </exclusions>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.5.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-junit5</artifactId>
+      <version>3.7.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
