--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
       <version>3.7.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.github.wnameless.json</groupId>
+      <artifactId>json-flattener</artifactId>
+      <version>0.8.0</version>
+    </dependency>
 
   </dependencies>
 
