--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
       <artifactId>json-flattener</artifactId>
       <version>0.8.0</version>
     </dependency>
+    <dependency>
+      <groupId>net.sf.barcode4j</groupId>
+      <artifactId>barcode4j</artifactId>
+      <version>2.0</version>
+    </dependency>
 
   </dependencies>
 
