--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
       <version>0.7.1</version>
     </dependency>
     <dependency>
-      <groupId>net.sf.barcode4j</groupId>
+      <groupId>com.singingbush</groupId>
       <artifactId>barcode4j</artifactId>
       <version>2.4.0</version>
     </dependency>
