--- a/pom.xml
+++ b/pom.xml
@@ -115,12 +115,12 @@
     <dependency>
       <groupId>com.github.spullara.mustache.java</groupId>
       <artifactId>compiler</artifactId>
-      <version>0.9.10</version>
+      <version>0.9.14</version>
     </dependency>
     <dependency>
       <groupId>com.github.wnameless.json</groupId>
       <artifactId>json-flattener</artifactId>
-      <version>0.7.1</version>
+      <version>0.17.2</version>
     </dependency>
     <dependency>
       <groupId>com.singingbush</groupId>
@@ -151,9 +151,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock-jre8</artifactId>
-      <version>3.0.1</version>
+      <groupId>org.wiremock</groupId>
+      <artifactId>wiremock</artifactId>
+      <version>3.12.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
